--- a/sample/blockquotes.html
+++ b/sample/blockquotes.html
@@ -73,10 +73,10 @@ Based on Twitter Bootstrap
                     <h2>Example:</h2>
                     <!--#include virtual="/sample/modules/blockquote.html" -->
                     
-                    <b>Naming a source</b>
+                    <h3>Naming a source</h3>
                     <p>Add a <code>&lt;footer&gt;</code> for identifying the source. Wrap the name of the source work in <code>&lt;cite&gt;</code>.</p>
                     
-                    <b>Alternate displays</b>
+                    <h3>Alternate displays</h3>
                     <p>Add <code>.blockquote-reverse</code> for a blockquote with right-aligned content.</p>
                 </div>
                  <div class="half">
