--- a/sample/modules/text-accent.html
+++ b/sample/modules/text-accent.html
@@ -6,18 +6,18 @@
 <p class="text-accent6">Accent Text 6</p>
 <p class="text-accent7">Accent Text 7</p>
 <p class="text-accent8">Accent Text 8</p>
-<p class="text-accent9">Accent Text 9</p>
+<p class="text-accent9 bg-dark">Accent Text 9</p>
 <!-- Color Scheme Styles -->
-<p class="text-accent-p1">Accent Text Primary 1</p>
+<p class="text-accent-p1 bg-dark">Accent Text Primary 1</p>
 <p class="text-accent-p2">Accent Text Primary 2</p>
 <p class="text-accent-p3">Accent Text Primary 3</p>
-<p class="text-accent-s1">Accent Text Secondary 1</p>
-<p class="text-accent-s2">Accent Text Secondary 2</p>
-<p class="text-accent-s3">Accent Text Secondary 3</p>
+<p class="text-accent-s1 bg-dark">Accent Text Secondary 1</p>
+<p class="text-accent-s2 bg-dark">Accent Text Secondary 2</p>
+<p class="text-accent-s3 bg-dark">Accent Text Secondary 3</p>
 <!-- Additional Helper Styles -->
 <p class="text-muted">Muted Text</p>
 <p class="text-primary">Primary Text</p>
 <p class="text-success">Success Text</p>
 <p class="text-info">Info Text</p>
-<p class="text-warning">Warning Text</p>
+<p class="text-warning bg-dark">Warning Text</p>
 <p class="text-danger">Danger Text</p>
