--- a/sample/course-list.html
+++ b/sample/course-list.html
@@ -8,40 +8,32 @@
 <!--<![endif]-->
 
 <head>
-
     <!--    California State Template
  
- 
-Based on Twitter Bootstrap
--->
+        
+        Based on Twitter Bootstrap
+    -->
     <meta charset="utf-8">
-
     <title>Sample - Course List</title>
-
     <meta name="Author" content="State of California" />
     <meta name="Description" content="State of California" />
     <meta name="Keywords" content="California, government" />
-
     <!--#include virtual="/ssi/head-css-js.html" -->
     <script type="text/javascript">
-        var defaultActiveLink = "Components";
+        var defaultActiveLink = "Pages";
     </script>
 </head>
 
-<body class="two-column">
-
-    <header role="banner" id="header" class="global-header">
+<body>
+    <header role="banner" id="header" class="global-header fixed">
         <div id="skip-to-content"><a href="#main-content">Skip to Main Content</a></div>
 
         <!-- Include Utility Header -->
         <!--#include virtual="/ssi/utility-header.html" -->
-
         <!-- Settings Bar -->
         <!--#include virtual="/ssi/settings-bar.html" -->
-
         <!-- Include Branding -->
         <!--#include virtual="/ssi/branding-lightgrey.html" -->
-
         <!-- Include Mobile Controls -->
         <!--#include virtual="/ssi/mobile-controls.html" -->
 
@@ -54,71 +46,76 @@ Based on Twitter Bootstrap
             <!--#include virtual="/ssi/navigation.html" -->
         </div>
 
-        <div class="header-decoration"></div>
     </header>
 
     <div id="main-content" class="main-content">
         <div class="container p-b-lg p-t-md">
-            <main class="main-primary">
-                <nav aria-label="You are here">
-                    <ol class="breadcrumb">
-                        <li><a href="../index.html" title="Home page">Home</a></li>
-                        <li><a href="/sample/" title="Content Modules landing page">Content Modules</a></li>
-                        <li class="active">Course List</li>
-                    </ol>
-                </nav>
+            <div class="row">
+                <div class="col-md-8">
+                    <main class="main-primary">
+                        <nav aria-label="You are here">
+                            <ol class="breadcrumb">
+                                <li><a href="../index.html" title="Home page">Home</a></li>
+                                <li><a href="/sample/" title="Content Modules landing page">Content Modules</a></li>
+                                <li class="active">Course List</li>
+                            </ol>
+                        </nav>
 
-                <h1>Course List</h1>
-                <p>A course list contains a repeating group of courses. To begin, wrap this module in a
-                    <code>&lt;section class="course-list"&gt;</code>. Then use
-                    <code>&lt;article class="course-item"&gt;</code> to group intividual courses together.
-                </p>
-                <p>A <code>.course-item</code> has the following primary child elements.</p>
-                <ul>
-                    <li><code>.thumbnail</code> - Optional, Requires a thumbnail that is 70px wide</li>
-                    <li><code>.title</code> - A short title that is linkable to the detail page</li>
-                    <li><code>.datetime</code> - Date and time the course is offered</li>
-                    <li><code>.description</code> - A short summary or teaser for the event</li>
-                    <li><code>.location</code> - Address where course is offered</li>
-                </ul>
+                        <h1>Course List</h1>
+                        <p>A course list contains a repeating group of courses. To begin, wrap this module in a
+                            <code>&lt;section class="course-list"&gt;</code>. Then use
+                            <code>&lt;article class="course-item"&gt;</code> to group intividual courses together.
+                        </p>
+                        <p>A <code>.course-item</code> has the following primary child elements.</p>
+                        <ul>
+                            <li><code>.thumbnail</code> - Optional, Requires a thumbnail that is 70px wide</li>
+                            <li><code>.title</code> - A short title that is linkable to the detail page</li>
+                            <li><code>.datetime</code> - Date and time the course is offered</li>
+                            <li><code>.description</code> - A short summary or teaser for the event</li>
+                            <li><code>.location</code> - Address where course is offered</li>
+                        </ul>
 
-                <!--#include virtual="/sample/modules/schema-boilerplate.html" -->
+                        <!--#include virtual="/sample/modules/schema-boilerplate.html" -->
 
-                <h2>Example:</h2>
-                <!--#include virtual="/sample/modules/course-list.html" -->
+                        <h2>Example:</h2>
+                        <!--#include virtual="/sample/modules/course-list.html" -->
 
-                <h2>Source Code:</h2>
+                        <h2>Source Code:</h2>
 
-                <div class="tab-group">
-                    <ul id="sourceCode" class="nav nav-tabs" role="tablist">
-                        <li class="active"><a href="#html" role="tab" data-bs-toggle="tab">HTML Markup</a></li>
-                        <li><a href="#microdata" role="tab" data-bs-toggle="tab">Microdata</a></li>
-                    </ul>
-                    <!-- Tab panes -->
-                    <div class="tab-content responsive">
-                        <div class="tab-pane active" id="html">
-                            <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/course-list.html" --></code></pre>
+                        <div class="tab-group">
+                            <ul id="sourceCode" class="nav nav-tabs" role="tablist">
+                                <li class="active"><a href="#html" role="tab" data-bs-toggle="tab">HTML Markup</a></li>
+                                <li><a href="#microdata" role="tab" data-bs-toggle="tab">Microdata</a></li>
+                            </ul>
+                            <!-- Tab panes -->
+                            <div class="tab-content responsive">
+                                <div class="tab-pane active" id="html">
+                                    <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/course-list.html" --></code></pre>
+                                </div>
+                                <div class="tab-pane" id="microdata">
+                                    <p class="alert alert-info">NOTE: This module makes use of a <code>datetime</code>
+                                        property
+                                        set in the <strong>ISO 8601</strong> format. Be sure to set the time correctly.
+                                    </p>
+                                    <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/course-list-schema.html" --></code></pre>
+                                </div>
+                            </div>
                         </div>
-                        <div class="tab-pane" id="microdata">
-                            <p class="alert alert-info">NOTE: This module makes use of a <code>datetime</code> property
-                                set in the <strong>ISO 8601</strong> format. Be sure to set the time correctly.</p>
-                            <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/course-list-schema.html" --></code></pre>
-                        </div>
-                    </div>
+
+
+                    </main>
                 </div>
-
-            </main>
-            <div class="main-secondary" role="complementary">
-                <!--#include virtual="/sample/modules/profile-banners.html" -->
-                <!--#include virtual="/sample/modules/cards-sidebar.html" -->
+                <div class="col-md-4 p-t-lg" role="complementary">
+                    <!--#include virtual="/sample/modules/profile-banners.html" -->
+                    <!--#include virtual="/sample/modules/cards-sidebar.html" -->
+                </div>
             </div>
         </div>
+
     </div>
 
     <!--#include virtual="/ssi/global-footer.html" -->
-
     <!--#include virtual="/ssi/scripts.html" -->
-
 </body>
 
 </html>
